<resources>
    <string name="app_name">Reduction</string>
    <string name="title_activity_home">Reduction</string>
    <string name="title_encyclopedia">Энциклопедия</string>
    <string name="title_calculation">Расчет</string>
    <string name="title_favorites">Закладки</string>

    <!-- Flow control -->
    <string name="control_prev">Назад</string>
    <string name="control_next">Дальше</string>

    <string name="calculation_process_description">Описание процесса расчета</string>

    <string name="descr_new_calculation">Новый расчет</string>

    <string name="descr_expand">Раскрыть</string>
    <string name="descr_collapse">Скрыть</string>

    <string name="action_settings">Настройки</string>
    <string name="settings_about">О приложении</string>

    <string name="float_hint">float</string>
    <string name="integer_hint">integer</string>

    <string name="about_text_desctiption">Данное приложение носит обучающий характер и призвано облегчить
        жизнь студентов при расчете редукторов. Главные функции приложения:\n
        · поэтапный расчет редуктора по заданным характеристикам с поясняющими элементами;\n
        · небольшой словарь терминов, проясняющий взаимосвязи
        между различными величинами, задействованными при расчетах.\n
        Приложение разработано в рамках курсового проекта по дисциплине
    \"Детали машин\". \n\nРазработчики:\n
        · Горностаев Александр, студент РК9 (дизайн, вёрстка, архитектура)\n
        · Трофимов Дмитрий, студент РК9 (логика расчетов редукторов)
    </string>
    <string name="enter">Ввести</string>
    <string name="content_descr_simple_picture">simple picture</string>
    <string name="selected">Выбрано :</string>
    <string name="enter_data">Введите все данные</string>
    <string name="continue_calculation">Продолжить расчет</string>
    <string name="new_calculation">Новый расчет</string>
    <string name="calculation">Расчет</string>
    <string name="text_size_probe">Probe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tables">Таблицы</string>
    <string name="variables">Величины</string>
    <string name="view_result_here">View result here</string>
    <string name="results">Результаты</string>
    <string name="see_result">"Результат %1$d"</string>
    <string name="finish_calculations">Закончить вычисления</string>
</resources>
