<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_encyclopedia">

    <fragment
        android:id="@+id/navigation_calculation"
        android:name="com.reducetechnologies.reduction.home_screen.ui.dashboard.DashboardFragment"
        android:label="@string/title_calculation"
        tools:layout="@layout/fragment_calculation" />

    <fragment
        android:id="@+id/navigation_encyclopedia"
        android:name="com.reducetechnologies.reduction.home_screen.ui.home.HomeFragment"
        android:label="@string/title_encyclopedia"
        tools:layout="@layout/fragment_encyclopedia"/>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.reducetechnologies.reduction.home_screen.ui.notifications.NotificationsFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <action
        android:id="@+id/action_global_navigation_encyclopedia"
        app:destination="@id/navigation_encyclopedia"
        app:enterAnim="@anim/fragment_open_enter" />
    <action
        android:id="@+id/action_global_navigation_favorites"
        app:destination="@id/navigation_favorites"
        app:enterAnim="@anim/fragment_open_enter" />
    <action
        android:id="@+id/action_global_navigation_calculation"
        app:destination="@id/navigation_calculation"
        app:enterAnim="@anim/fragment_open_enter" />

</navigation>