<?xml version="1.0" encoding="utf-8"?>
<!-- This view is designed with purpose to control the flow of calculation
     Must contain prev button, next button -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/material_horizontal_margin"
    android:layout_marginEnd="@dimen/material_horizontal_margin">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/controlPrev"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_prev"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/controlNext"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_next"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/controlEnter"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/controlNext"
        app:layout_constraintStart_toEndOf="@+id/controlPrev"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>