<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/calculation_navigation"
    app:startDestination="@id/calculationFragment">
    <fragment
        android:id="@+id/calculationFragment"
        android:name="com.reducetechnologies.reduction.home_screen.ui.calculation.CalculationFragment"
        android:label="@string/title_calculation"
        tool:layout="@layout/fragment_calculation">
        <action
            android:id="@+id/action_calculationFragment_to_flowFragment"
            app:destination="@id/flowFragment" />
    </fragment>
    <fragment
        android:id="@+id/flowFragment"
        android:name="com.reducetechnologies.reduction.home_screen.ui.calculation.flow.FlowFragment"
        android:label="@string/calculation"
        tool:layout="@layout/split_control_card_layout"
        >
        <action
            android:id="@+id/action_flowFragment_to_resultsActivity"
            app:destination="@id/resultsActivity" />
        <action
            android:id="@+id/action_flowFragment_to_resultList"
            app:destination="@id/resultList" />
    </fragment>
    <activity
        android:id="@+id/resultsActivity"
        android:name="com.reducetechnologies.reduction.home_screen.ui.common.ResultsActivity"
        android:label="@string/results"
        tool:layout="@layout/activity_results" >
        <argument
            android:name="reducersData"
            app:argType="string" />
    </activity>
    <activity
        android:id="@+id/resultList"
        android:name="com.reducetechnologies.reduction.home_screen.ui.calculation.flow.results.ResultList"
        android:label="activity_result_list"
        tool:layout="@layout/activity_result_list" >
        <argument
            android:name="reducersDataList"
            app:argType="string" />
    </activity>

    <action
        android:id="@+id/action_global_resultsActivity"
        app:destination="@id/resultsActivity" />

</navigation>